...
                  width: 96,
                  height: 48,
                  child: SpaceButton(
                    config: widget.config,
                    sprite: 'ammo_normal',
                    height: 48,
                    label: 'Bỏ qua',
                    onPressed: _engine.skipTutorial,
                  ),
                ),
                if (_engine.canNextStep) ...[
                  const SizedBox(width: 10),
                  SizedBox(
...
